# sybilengine

./: '  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  engine.drawio  makefile
engine/: CMakeLists.txt
engine/include/sybilengine/: application.hpp  audio.hpp  core.hpp  debug.hpp  ecs.hpp  imgui.hpp  renderer.hpp  sybilengine.hpp  util.hpp
engine/include/sybilengine/audio/: channel.hpp  mixer.hpp  music.hpp  sound.hpp
engine/include/sybilengine/core/: filesystem.hpp  imgui.hpp  input.hpp  keycode.hpp  window.hpp
engine/include/sybilengine/debug/: logger.hpp
engine/include/sybilengine/ecs/: chunk.hpp  component.hpp  componentmanager.hpp  entity.hpp  entitypool.hpp  filter.hpp  inspectable.hpp  phys.hpp  scene.hpp  transform.hpp
engine/include/sybilengine/ecs/phys/: collider.hpp  collidergrid.hpp  collision.hpp  collisionmatrix.hpp  quadtree.hpp
engine/include/sybilengine/imgui/: imguicontext.hpp
engine/include/sybilengine/renderer/: batch.hpp  blendmode.hpp  circleshape.hpp  font.hpp  framebuffer.hpp  lineshape.hpp  rectangleshape.hpp  renderbatch.hpp  renderer.hpp  renderwindow.hpp  shader.hpp  sprite.hpp  spriteatlas.hpp  texture.hpp  view.hpp
engine/include/sybilengine/renderer/opengl/: blendmode.hpp  bufferbits.hpp  bufferlayout.hpp  elementbuffer.hpp  framebuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp  vertexbuffer.hpp  viewport.hpp
engine/include/sybilengine/util/: bitmask.hpp  bitmaskmap.hpp  circle.hpp  color.hpp  freelist.hpp  idmap.hpp  line.hpp  math.hpp  pagetable.hpp  quad.hpp  random.hpp  rect.hpp  stopwatch.hpp  time.hpp  timeunit.hpp  vec.hpp  vector2.hpp
engine/src/: CMakeLists.txt  application.cpp  spch.hpp  sybilengine.cpp
engine/src/audio/: CMakeLists.txt  mixer.cpp  sound.cpp
engine/src/core/: CMakeLists.txt  filesystem.cpp  gamepadmappings.hpp  imgui.cpp  window.cpp
engine/src/core/glfw/: input.cpp  window.cpp
engine/src/debug/: CMakeLists.txt  logger.cpp
engine/src/ecs/: CMakeLists.txt  entity.cpp  scene.cpp
engine/src/ecs/phys/: collider.cpp  collidergrid.cpp  collision.cpp  collisionmatrix.cpp  quadtree.cpp
engine/src/imgui/: CMakeLists.txt  imgui.cpp
engine/src/renderer/: CMakeLists.txt  framebuffer.cpp  lineshape.cpp  rectangleshape.cpp  renderbatch.cpp  renderer.cpp  renderwindow.cpp  shader.cpp  sprite.cpp  spriteatlas.cpp  texture.cpp  view.cpp
engine/src/renderer/glsl/: line.fs.glsl  line.vs.glsl  rectangle.fs.glsl  rectangle.vs.glsl  screen_fs.glsl  screen_vs.glsl  sprite.fs.glsl  sprite.vs.glsl  sprite_batch_fs.glsl  sprite_batch_vs.glsl  sprite_instance.fs.glsl  sprite_instance.vs.glsl  test_vs.glsl
engine/src/renderer/opengl/: blendmode.cpp  bufferbits.cpp  bufferlayout.cpp  elementbuffer.cpp  framebuffer.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp  viewport.cpp
engine/src/util/: CMakeLists.txt  bitmask.cpp  circle.cpp  line.cpp  math.cpp  random.cpp  rect.cpp  stopwatch.cpp  time.cpp  vector2.cpp
sandbox/: CMakeLists.txt  applicationtest.cpp  audio.cpp  batch_renderer.cpp  core.cpp  glfwmemtest.cpp  imgui_test.cpp  imguitest.cpp  inputpolltest.cpp  opengltest.cpp  phys_stress.cpp  pong.cpp  renderer.cpp
tests/: CMakeLists.txt  tests.cpp  todo.md
tests/engine/ecs/: test_component.cpp  test_componentmanager.cpp  test_scene.cpp  test_transform.cpp
tests/engine/ecs/phys/: test_collider.cpp  test_collidergrid.cpp  test_collision.cpp
tests/engine/renderer/: test_opengl.cpp
tests/engine/renderer/gl/: test_texture.cpp
tests/engine/util/: test_bitmask.cpp  test_circle.cpp  test_freelist.cpp  test_idmap.cpp  test_vec.cpp  test_vector2.cpp
